--- a/public/index.html
+++ b/public/index.html
@@ -50,23 +50,6 @@
           />
         </svg>
       </button>
-      <button class="editBtns_save" style="display: none">
-        Save
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="i i_tick"
-          fill="inherit"
-          viewBox="0 0 15 15"
-        >
-          <path
-            id="tickSymbol"
-            fill="inherit"
-            fill-rule="evenodd"
-            d="M14.707 3 5.5 12.207.293 7 1 6.293l4.5 4.5 8.5-8.5.707.707Z"
-            clip-rule="evenodd"
-          />
-        </svg>
-      </button>
       <button class="editBtns_del">
         Delete
         <svg
@@ -85,6 +68,23 @@
           />
         </svg>
       </button>
+      <button class="editBtns_save" style="display: none">
+        Save
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="i i_tick"
+          fill="inherit"
+          viewBox="0 0 15 15"
+        >
+          <path
+            id="tickSymbol"
+            fill="inherit"
+            fill-rule="evenodd"
+            d="M14.707 3 5.5 12.207.293 7 1 6.293l4.5 4.5 8.5-8.5.707.707Z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </button>
       <button class="editBtns_discard" style="display: none">
         Discard
         <svg
@@ -94,11 +94,34 @@
           viewBox="0 0 24 24"
         >
           <path
+            id="xSymbol"
             fill="inherit"
             fill-rule="evenodd"
             d="M4.227 4.227a.774.774 0 0 1 1.095 0L12 10.905l6.678-6.678a.774.774 0 1 1 1.095 1.095L13.095 12l6.678 6.678a.774.774 0 1 1-1.095 1.095L12 13.095l-6.678 6.678a.774.774 0 1 1-1.095-1.095L10.905 12 4.227 5.322a.774.774 0 0 1 0-1.095Z"
             clip-rule="evenodd"
           />
+        </svg>
+      </button>
+      <button class="editBtns_done" style="display: none">
+        Done
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="i i_done"
+          fill="inherit"
+          viewBox="0 0 15 15"
+        >
+          <use href="#tickSymbol"></use>
+        </svg>
+      </button>
+      <button class="editBtns_clearAll" style="display: none">
+        ClearAll
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="i i_clearAll"
+          fill="inherit"
+          viewBox="0 0 24 24"
+        >
+          <use href="#xSymbol"></use>
         </svg>
       </button>
     </div>
