--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,11 @@
   <body>
     <header>
       <div class="link">
-        <a href="https://github.com/dany-cb/ToDo-List" target="_blank" class="link_imgWrap">
+        <a
+          href="https://github.com/dany-cb/ToDo-List"
+          target="_blank"
+          class="link_imgWrap"
+        >
           <img alt="Github Logo" id="logo" />
         </a>
         <p class="link_desc">
